{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 10,
  "lineage": "49691bca-3796-1ce5-8d54-45abb9bd2533",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ourfirst",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ff5003538b60d5ec",
            "arn": "arn:aws:ec2:ap-south-1:591136340169:instance/i-02698d09f962a4a10",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdf",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "CreationDate": "date-29012026",
                  "Team": "security-team"
                },
                "tags_all": {
                  "CreationDate": "date-29012026",
                  "Team": "security-team"
                },
                "throughput": 0,
                "volume_id": "vol-0f562a9d622c726c5",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02698d09f962a4a10",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-00b3825afcdf36683"
              }
            ],
            "primary_network_interface_id": "eni-00b3825afcdf36683",
            "private_dns": "ip-172-31-41-6.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.41.6",
            "public_dns": "ec2-13-233-216-152.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.216.152",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04a75a34bd5f96579",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "app_firewall",
              "db_firewall"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-030c83860a4acdadc",
            "tags": {
              "Name": "dev"
            },
            "tags_all": {
              "Name": "dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b8ebd41b93fb9785",
              "sg-0dde713d2ff3ad711"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "591136340169",
            "id": "i-02698d09f962a4a10",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.sg_01",
            "aws_security_group.sg_02"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ff5003538b60d5ec",
            "arn": "arn:aws:ec2:ap-south-1:591136340169:instance/i-0e85489882d6d33ca",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e85489882d6d33ca",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04d1a70e0cab2903a"
              }
            ],
            "primary_network_interface_id": "eni-04d1a70e0cab2903a",
            "private_dns": "ip-172-31-33-194.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.33.194",
            "public_dns": "ec2-13-233-196-124.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.196.124",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d44525412e23d755",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "app_firewall",
              "db_firewall"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-030c83860a4acdadc",
            "tags": {
              "Name": "qa"
            },
            "tags_all": {
              "Name": "qa"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b8ebd41b93fb9785",
              "sg-0dde713d2ff3ad711"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "591136340169",
            "id": "i-0e85489882d6d33ca",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.sg_01",
            "aws_security_group.sg_02"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ff5003538b60d5ec",
            "arn": "arn:aws:ec2:ap-south-1:591136340169:instance/i-0342580c838de694e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0342580c838de694e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-039ef91b8a8b9be80"
              }
            ],
            "primary_network_interface_id": "eni-039ef91b8a8b9be80",
            "private_dns": "ip-172-31-22-145.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.22.145",
            "public_dns": "ec2-13-205-3-20.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.205.3.20",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d69543791aa32ca6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "app_firewall",
              "db_firewall"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07dcfa38efe76b818",
            "tags": {
              "Name": "prod"
            },
            "tags_all": {
              "Name": "prod"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b8ebd41b93fb9785",
              "sg-0dde713d2ff3ad711"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "591136340169",
            "id": "i-0342580c838de694e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.sg_01",
            "aws_security_group.sg_02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:591136340169:security-group/sg-0dde713d2ff3ad711",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0dde713d2ff3ad711",
            "ingress": [],
            "name": "app_firewall",
            "name_prefix": "",
            "owner_id": "591136340169",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreationDate": "date-29012026",
              "Team": "security-team"
            },
            "tags_all": {
              "CreationDate": "date-29012026",
              "Team": "security-team"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f195039ca5f09296"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "591136340169",
            "id": "sg-0dde713d2ff3ad711",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:591136340169:security-group/sg-0b8ebd41b93fb9785",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b8ebd41b93fb9785",
            "ingress": [],
            "name": "db_firewall",
            "name_prefix": "",
            "owner_id": "591136340169",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreationDate": "date-29012026",
              "Team": "security-team"
            },
            "tags_all": {
              "CreationDate": "date-29012026",
              "Team": "security-team"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f195039ca5f09296"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "591136340169",
            "id": "sg-0b8ebd41b93fb9785",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}